--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.53.0",
+    "dotenv": "^17.2.3",
     "next": "15.4.5",
     "openai": "^6.9.0",
     "react": "19.1.0",
